# erpnext_productivity_lite

./: README.md  pyproject.toml
erpnext_productivity_lite/: hooks.py  patches.txt
