[project]
name = "erpnext_productivity_lite"
authors = [
    { name = "Werner.Solutions", email = "office@werner.solutions" }
]
description = "Todoist-style task management with gamification for ERPNext/Frappe"
requires-python = ">=3.10,<3.14"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "erpnext"
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench]
frappe-dependencies = [
    "erpnext"
]
